--- a/styles/reset.css
+++ b/styles/reset.css
@@ -124,9 +124,9 @@ table {
   border-spacing: 0;
 }
 body {
-  
+  max-width: 100vw;
   min-height: 100vh;
-  overflow-x: hidden; /* Hide horizontal scrollbar */
+  max-width: 100%
 }
 *{
   -webkit-font-smoothing: antialiased;
